--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "include/stb"]
 	path = include/stb
 	url = https://github.com/nothings/stb.git
+[submodule "include/tinygltf"]
+	path = include/tinygltf
+	url = https://github.com/syoyo/tinygltf
