--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "include/json"]
 	path = include/json
 	url = https://github.com/nlohmann/json.git
+[submodule "include/ozz-animation"]
+	path = include/ozz-animation
+	url = https://github.com/guillaumeblanc/ozz-animation.git
