jolt and some more cleanup

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "include/ozz-animation"]
 	path = include/ozz-animation
 	url = https://github.com/guillaumeblanc/ozz-animation.git
+[submodule "include/JoltPhysics"]
+	path = include/JoltPhysics
+	url = https://github.com/jrouwe/JoltPhysics.git
