--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ set(FMOD_INCLUDE_DIRS
         ${CMAKE_SOURCE_DIR}/include/FModStudio/api/core/inc
 )
 
-# ReactPhysics3D
-find_package(ReactPhysics3D REQUIRED)
+# Jolt
+set(JOLT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/JoltPhysics/Jolt)
 
 target_link_libraries(Gungutils
     PRIVATE
@@ -46,7 +46,6 @@ target_link_libraries(Gungutils
         TinyFD
         dl
         pthread
-        ReactPhysics3D::ReactPhysics3D
 )
 
 target_include_directories(Gungutils
@@ -57,5 +56,4 @@ target_include_directories(Gungutils
         ${X11_INCLUDE_DIR}
         ${XCURSOR_INCLUDE_DIRS}
         ${JOLT_SOURCE_DIR}
-
 )
