worked a bit on making this cross-platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,15 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(OpenGL REQUIRED)
 
 # Platform-specific dependencies
-if(UNIX AND NOT APPLE)  # Linux
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    set(PLATFORM_LIBS)
+    set(PLATFORM_INCLUDE_DIRS)
+else() # Linux or Mac I guess
     find_package(X11 REQUIRED COMPONENTS Xi)
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(XCURSOR REQUIRED xcursor)
     set(PLATFORM_LIBS ${X11_LIBRARIES} X11::Xi ${XCURSOR_LIBRARIES} dl pthread)
     set(PLATFORM_INCLUDE_DIRS ${X11_INCLUDE_DIR} ${XCURSOR_INCLUDE_DIRS})
-elseif(WIN32)
-    # Windows-specific libraries will be linked automatically by SDL3 and other libs
-    set(PLATFORM_LIBS)
-    set(PLATFORM_INCLUDE_DIRS)
 endif()
 
 # ImGui
@@ -33,21 +32,24 @@ add_executable(Gungutils main.cpp)
 
 # subdirectories
 add_subdirectory(${CMAKE_SOURCE_DIR}/include/SDL)
-add_subdirectory(${CMAKE_SOURCE_DIR}/include/ozz-animation)
+#add_subdirectory(${CMAKE_SOURCE_DIR}/include/ozz-animation)
 add_subdirectory(${CMAKE_SOURCE_DIR}/include/meshoptimizer)
 
-# FMOD setup - platform specific
-if(UNIX AND NOT APPLE)  # Linux
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")  # Windows
+    set(FMOD_STUDIO_A "${CMAKE_SOURCE_DIR}/include/FModStudio/api/studio/lib/x64/libfmodstudio.a")
+    set(FMOD_CORE_A   "${CMAKE_SOURCE_DIR}/include/FModStudio/api/core/lib/x64/libfmod.a")
+
+    if(EXISTS "${FMOD_STUDIO_A}" AND EXISTS "${FMOD_CORE_A}")
+        message(STATUS "using mingw import libs: ${FMOD_STUDIO_A}, ${FMOD_CORE_A}")
+        set(FMOD_STUDIO_LIB "${FMOD_STUDIO_A}")
+        set(FMOD_CORE_LIB "${FMOD_CORE_A}")
+    else()
+        set(FMOD_STUDIO_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/studio/lib/x64/fmodstudio.dll")
+        set(FMOD_CORE_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/core/lib/x64/fmod.dll")
+    endif()
+else() # Linux or Mac but ain't no way I'll use mac anytime
     set(FMOD_STUDIO_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/studio/lib/x86_64/libfmodstudio.so")
     set(FMOD_CORE_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/core/lib/x86_64/libfmod.so")
-elseif(WIN32)  # Windows
-    if(CMAKE_SIZEOF_VOID_P EQUAL 8)  # 64-bit
-        set(FMOD_STUDIO_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/studio/lib/x64/fmodstudio_vc.lib")
-        set(FMOD_CORE_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/core/lib/x64/fmod_vc.lib")
-    else()  # 32-bit
-        set(FMOD_STUDIO_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/studio/lib/x86/fmodstudio_vc.lib")
-        set(FMOD_CORE_LIB "${CMAKE_SOURCE_DIR}/include/FModStudio/api/core/lib/x86/fmod_vc.lib")
-    endif()
 endif()
 
 set(FMOD_INCLUDE_DIRS
@@ -61,7 +63,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/include/reactphysics3d)
 target_link_libraries(Gungutils
         PRIVATE
         SDL3::SDL3
-        ozz_animation
+        #ozz_animation
         OpenGL::GL
         ${FMOD_STUDIO_LIB}
         ${FMOD_CORE_LIB}
